[gd_scene load_steps=18 format=3 uid="uid://b45nfa5fhaxly"]

[ext_resource type="Script" uid="uid://b30yg7seug8tq" path="res://Scripts/slime.gd" id="1_swwnm"]
[ext_resource type="Texture2D" uid="uid://cj75k37xb06e3" path="res://Art_Forest/sprites/characters/slime.png" id="2_aiwxb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_paq7w"]
atlas = ExtResource("2_aiwxb")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4si1"]
atlas = ExtResource("2_aiwxb")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gljc"]
atlas = ExtResource("2_aiwxb")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vblni"]
atlas = ExtResource("2_aiwxb")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e388w"]
atlas = ExtResource("2_aiwxb")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4o34"]
atlas = ExtResource("2_aiwxb")
region = Rect2(32, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y26kt"]
atlas = ExtResource("2_aiwxb")
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7ij5"]
atlas = ExtResource("2_aiwxb")
region = Rect2(96, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_psnrq"]
atlas = ExtResource("2_aiwxb")
region = Rect2(128, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kh8cv"]
atlas = ExtResource("2_aiwxb")
region = Rect2(160, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_555id"]
atlas = ExtResource("2_aiwxb")
region = Rect2(192, 256, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xq7bh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_paq7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4si1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gljc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vblni")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e388w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4o34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y26kt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7ij5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psnrq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kh8cv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_555id")
}],
"loop": true,
"name": &"movement",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_10642"]
radius = 51.0392

[sub_resource type="CircleShape2D" id="CircleShape2D_uu7bc"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_swwnm"]
radius = 13.0

[node name="Slime" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_swwnm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_xq7bh")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.06515151
offset = Vector2(0, -4)

[node name="detection" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
shape = SubResource("CircleShape2D_10642")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_uu7bc")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_swwnm")

[node name="take_damm_cooldown" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="detection" to="." method="_on_detection_body_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="take_damm_cooldown" to="." method="_on_take_damm_cooldown_timeout"]
